# mindfack

./: .gitignore  CMakeLists.txt  README.md
include/automata/: base_automata.hpp  dfa.hpp  nfa.hpp  rfa.hpp
include/regular/: reg_parser.hpp
src/: mindfack.cpp
src/automata/: dfa.cpp  nfa.cpp  rfa.cpp
src/regular/: reg_parser.cpp
tests/unit/: CMakeLists.txt  dfa_test.cpp  nfa_test.cpp  regular_parser_test.cpp  rfa_test.cpp
